2008-01-07  Satoshi Nakagawa <artension@gmail.com>

	Added an exception handler in completing nick for safety.

2008-01-07  Satoshi Nakagawa <artension@gmail.com>

	Changed to not match a domain name followed by an alphabet or a digit.

2008-01-06  Satoshi Nakagawa <artension@gmail.com>

	Changed to not open a talk for 'NickServ' or 'ChanServ' when sending a command.

2008-01-05  Satoshi Nakagawa <artension@gmail.com>

	Added '%9n' and '%@%n' support for nick format.

2008-01-04  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, logs were cleared when reloading theme.

2008-01-04  Satoshi Nakagawa <artension@gmail.com>

	Fixed a nil access bug when updating a nick completion weight.
	Fixed a bug, a node class should be checked when removing an element in log views.

2008-01-03  Satoshi Nakagawa <artension@gmail.com>

	Removed target channel completion for text commands except /me.

2008-01-03  Satoshi Nakagawa <artension@gmail.com>

	Refactoring NumberFormat.
	Based on a patch from Stefan Rusterholz.

2007-12-29  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, autoop masks should ignore case.

2007-12-28  Satoshi Nakagawa <artension@gmail.com>

	Added modes count check for safety.

==== LimeChat 0.14.2 ====

2007-12-27  Satoshi Nakagawa <artension@gmail.com>

	Changed to complete a target channel when sending raw commands.

2007-12-27  Satoshi Nakagawa <artension@gmail.com>

	Integrated the font panel handler to the preferences dialog.
	Because if it is the first responder of the window, the window cannot receive any key events.

2007-12-27  Satoshi Nakagawa <artension@gmail.com>

	Changed the url regex to disallow parentheses, brackets, braces and etc in the end.

2007-12-25  Satoshi Nakagawa <artension@gmail.com>

	Switched back log file names to '(channel)/(date)_(server).txt' style.

2007-12-23  Satoshi Nakagawa <artension@gmail.com>

	Fixed a nil access bug in old WebKit, when changing theme in log.rb.
